Closed Bug 842729 Opened 11 years ago Closed 11 years ago

Repair merge failure from bug 807853

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla22

People

(Reporter: nmatsakis, Unassigned)

Details

Attachments

(1 file, 1 obsolete file)

Bug 807853 contained some merge failures:

- the code for inlining various ParallelArray-specific functions made incorrect use of CallInfo, because it considered |this| to be amongst the arguments in the list

- the |TypeOracle| code was incorrectly merged with bhackett's changes to implement double conversion, causing the read/write cases to be conflated
Attachment #715664 - Flags: review?(bhackett1024)
Blocks: 829602
Comment on attachment 715664 [details] [diff] [review]
Patch to implement described changes.

This seems to be the wrong patch.
Attachment #715664 - Flags: review?(bhackett1024)
Attachment #715664 - Attachment is obsolete: true
Attachment #715690 - Flags: review?(bhackett1024)
Attachment #715690 - Flags: review?(bhackett1024) → review+
https://hg.mozilla.org/mozilla-central/rev/c5c4c51585c3
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla22
No longer blocks: 829602
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: