Bug 842729 - Repair merge failures from bug 807853 in TypeOracle and MCallOptimize r=bhackett